assets/css/default_stylesheet.css
body {
	background-color: black;
	color: white
}

h1 {
	color: inherit;
	font-size: 2.8rem;
	max-width: 55%
}

p {
	
	color: inherit;
	font-size: 1.25rem
}

a {
	color: #CE3131;
	background-color: transparent;
	text-decoration: none;
}



a:hover {
	text-decoration: underline;
	color: #FFFF51;
}

li {
	font-size: 1.5rem
}

input {
	color: black;
}

button {
	color: black
}

hr {
	
}

.tier-image {
	text-align: left;
	left: 0;
	width: 570;
	height:277;
}

.suggestionbox {
	color: inherit;
	position: absolute;
	right: 0;
	top: 0;
	padding: 10px;	
	max-width: 40%
}


.warning {
	text-align: center;
}

.link-grid {
		display: grid;
		
		grid-template-columns: repeat(3, 1fr );
		gap: 20px;
		list-style-type: disc;
		padding-left: 20px;
		max-width: 40%;
		margin: auto;
    }

    .link-grid li {
		padding: 10px;
    }

    .link-grid a {
		color: #CE3131;
		background-color: transparent;
		text-decoration: none;
		text-align: center
	}
	
	

    .link-grid a:hover {
		text-decoration: underline;
		color: #FFFF51;
    }

	@media (max-width: 768px) {
		  .link-grid {
			grid-template-columns: repeat(2, 1fr);
		  }
	}

    @media (max-width: 480px) {
      .link-grid {
        grid-template-columns: 1fr;
	}
}

.dark-mode {
	background-color: black;
    color: black;
}


.dark-mode input,
.dark-mode button,
.dark-mode hr,
.dark-mode .blunderline,
.dark-mode .runderline,
.dark-mode .link-grid a,
.dark-mode {
	color: black;
	background-color: black;
	border-color: black;
	text-decoration: none
}


.runderline {
	text-decoration-line: underline;
	text-decoration-style: wavy;
	text-decoration-color: red;
}


.blunderline {
	text-decoration-line: underline;
	text-decoration-style: wavy;
	text-decoration-color: blue;
}


.true-center {
	padding: 70px 0;
	text-align: center;
	background-color: black;
	color: white;
}
	
	.true-center h1 {
		font-size: 6rem;
		margin-bottom: 20px;
    }
	
	.true-center a {
		color: #0077cc;
		text-decoration: none;
		font-size: 1.2rem;
    }
	
	.true-center a:visited {
		color: #CE3131;
	}
	
	.true-center a:hover {
		color: #FFFF51;
		text-decoration: underline;
    }

